# IoT_watering

./: docker-compose.yml
Database/: Dockerfile  schema.sql
Endpoint/: main.py  pyproject.toml  requirements.txt
Server/: Dockerfile  pyproject.toml  server.py
