[tool.poetry]
name = "water_server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^20.9.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
